--- a/WebApplication1/Pages/A.cshtml
+++ b/WebApplication1/Pages/A.cshtml
@@ -7,7 +7,7 @@
 <div class="hero">
     <h1 class="display-4">Produto Incrível</h1>
     <p class="lead">Transforme sua rotina com nossa solução exclusiva.</p>
-    <a href="#comprar" class="btn btn-light btn-lg mt-3">Quero Comprar</a>
+    <a class="btn btn-light btn-lg mt-3" asp-page="/index">Quero Comprar</a>
 </div>
 
 <div class="container features text-center">
@@ -30,5 +30,5 @@
 <div class="cta" id="comprar">
     <h2>Adquira Agora por Apenas R$99,90</h2>
     <p>Oferta por tempo limitado. Garanta já o seu!</p>
-    <a href="#" class="btn btn-dark btn-lg mt-3">Comprar Agora</a>
+    <a class="btn btn-dark btn-lg mt-3" asp-page="/Index">Comprar Agora</a>
 </div>
