--- a/WebApplication1/Pages/A.cshtml
+++ b/WebApplication1/Pages/A.cshtml
@@ -7,7 +7,7 @@
 <div class="hero">
     <h1 class="display-4">Produto Incrível</h1>
     <p class="lead">Transforme sua rotina com nossa solução exclusiva.</p>
-    <a href="#comprar" class="btn btn-light btn-lg mt-3">Quero Comprar</a>
+    <a id="compra" class="btn btn-light btn-lg mt-3" asp-page="/Compra">Quero Comprar</a>
 </div>
 
 <div class="container features text-center">
@@ -32,3 +32,6 @@
     <p>Oferta por tempo limitado. Garanta já o seu!</p>
     <a href="#" class="btn btn-dark btn-lg mt-3">Comprar Agora</a>
 </div>
+
+
+<script src="~/js/site.js" asp-append-version="true"></script>
