--- a/WebApplication1/Pages/Shared/_Layout.cshtml
+++ b/WebApplication1/Pages/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/A">TESTE</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/maintence">Maintence</a>
                         </li>
                     </ul>
                 </div>
